--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Static site",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx @11ty/eleventy",
+    "serve": "npx @11ty/eleventy --serve"
   },
   "author": "Guillaume Brioudes <https://myllaume.fr/>",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy": "^0.12.1",
     "js-yaml": "^3.14.0"
   }
 }
