--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Static site",
   "main": "index.js",
   "scripts": {
-    "build": "npx @11ty/eleventy",
-    "serve": "npx @11ty/eleventy --serve"
+    "build": "./node_modules/.bin/eleventy",
+    "serve": "./node_modules/.bin/eleventy --serve"
   },
   "author": "Guillaume Brioudes <https://myllaume.fr/>",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "js-yaml": "^3.14.0"
+    "@11ty/eleventy": "^1.0.2",
+    "js-yaml": "^4.1.0"
   }
 }
